--- a/index.html
+++ b/index.html
@@ -19,39 +19,41 @@
 </head>
 
 <body>
-    <main class="main">
-        <div class="container">
-            <ul class="list-img">
-                <li>
-                    <div class="item">
-                        <img src="src/images/rome.png" alt="rome">
-                        <h2>Rome</h2>
-                        <p>Michelangelo</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="item">
-                        <img src="src/images/boat.png" alt="boat">
-                        <h2>Boat at Sea</h2>
-                        <p>Vicent Van Gogh</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="item">
-                        <img src="src/images/sand-and-sea.png" alt="sand and sea">
-                        <h2>Sand and Sea</h2>
-                        <p>Da vinci</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="item">
-                        <img src="src/images/starry-night.png" alt="starry-night">
-                        <h2>Starry Night</h2>
-                        <p>Vicent Van Gogh</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
+    <main>
+        <section class="pinturas">
+            <div class="pintura">
+                <img src="src/images/rome.png" alt="rome">
+
+                <div class="informacoes">
+                    <h2 class="titulo">Rome</h2>
+                    <h3 class="subtitulo">Michelangelo</h3>
+                </div>
+            </div>
+            <div class="pintura">
+                <img src="src/images/boat.png" alt="boat">
+
+                <div class="informacoes">
+                    <h2 class="titulo">Boat at Sea</h2>
+                    <h3 class="subtitulo">Vicent Van Gogh</h3>
+                </div>
+            </div>
+            <div class="pintura">
+                <img src="src/images/sand-and-sea.png" alt="sand and sea">
+
+                <div class="informacoes">
+                    <h2 class="titulo">Sand and Sea</h2>
+                    <h3 class="subtitulo">Da vinci</h3>
+                </div>
+            </div>
+            <div class="pintura">
+                <img src="src/images/starry-night.png" alt="starry-night">
+
+                <div class="informacoes">
+                    <h2 class="titulo">Starry Night</h2>
+                    <h3 class="subtitulo">Vicent Van Gogh</h3>
+                </div>
+            </div>              
+        </section>
     </main>
 </body>
 
